Add gptprio to grub
Signed-off-by: iliana destroyer of worlds <iweller@amazon.com>

--- a/packages/grub/core.cfg
+++ b/packages/grub/core.cfg
@@ -1,9 +1,5 @@
-set boot_uuid="2415fbea-3fdc-4260-9560-28418ee80c45"
-set root_uuid="501efeae-456a-4162-8784-01209628c6ae"
-
-export boot_uuid
-export root_uuid
-
-search.fs_uuid $boot_uuid root
+gptprio.next -d boot_dev -u boot_uuid
+set root=$boot_dev
 set prefix=($root)/grub
+export boot_uuid
 configfile /grub/grub.cfg
