--- a/workspaces/api/thar-be-settings/Cargo.toml
+++ b/workspaces/api/thar-be-settings/Cargo.toml
@@ -7,8 +7,7 @@ publish = false
 build = "build.rs"
 
 [dependencies]
-# FIXME Using rustls until openssl is packaged.
-reqwest = { version = "0.9", default-features = false, features = [ "rustls-tls" ] }
+reqwest = { version = "0.9", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 handlebars = "1.1"
