Fix comment in defaults regarding optional values
Defaults don't need to fill every (optional) field of the model, since we
improved our ser/de code.

Signed-off-by: Tom Kirchner <tjk@amazon.com>

--- a/workspaces/api/apiserver/defaults.toml
+++ b/workspaces/api/apiserver/defaults.toml
@@ -1,5 +1,5 @@
 # OS-level defaults.
-# Should match the structures in src/model.rs and fill every field.
+# Should match the structures in src/model.rs.
 
 [settings]
 timezone = "America/Los_Angeles"
