Major reorganization of TBS
This commit reorganized TBS into modules, drastically shortening
main and making all logic easier to follow.
Goodbye repeated code!

--- a/workspaces/api/thar-be-settings/Cargo.toml
+++ b/workspaces/api/thar-be-settings/Cargo.toml
@@ -15,6 +15,7 @@ derive-error = "0.0"
 apiserver = { path = "../apiserver" }
 log = "0.4"
 stderrlog = "0.4"
+itertools = "0.8"
 
 [build-dependencies]
 cargo-readme = "3.1"
