--- a/packages/api/moondog.service
+++ b/packages/api/moondog.service
@@ -1,7 +1,9 @@
 [Unit]
 Description=Thar userdata configuration system
+After=network-online.target
 After=apiserver.service
-Wants=apiserver.service
+Requires=network-online.target
+Requires=apiserver.service
 
 [Service]
 Type=oneshot
