--- a/workspaces/api/apiserver/Cargo.toml
+++ b/workspaces/api/apiserver/Cargo.toml
@@ -7,13 +7,13 @@ publish = false
 build = "build.rs"
 
 [dependencies]
-derive-error = "0.0"
 lazy_static = "1.2"
 log = "0.4"
 regex = "1.1"
 rouille = { version = "3.0", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+snafu = "0.4"
 stderrlog = "0.4"
 toml = "0.5"
 walkdir = "2.2"
