--- a/workspaces/api/moondog/Cargo.toml
+++ b/workspaces/api/moondog/Cargo.toml
@@ -10,8 +10,8 @@ build = "build.rs"
 reqwest = { version = "0.9", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
+snafu = "0.4"
 toml = "0.4"
-derive-error = "0.0"
 log = "0.4"
 stderrlog = "0.4"
 
