--- a/workspaces/api/thar-be-settings/Cargo.toml
+++ b/workspaces/api/thar-be-settings/Cargo.toml
@@ -7,15 +7,15 @@ publish = false
 build = "build.rs"
 
 [dependencies]
+apiserver = { path = "../apiserver" }
+handlebars = "1.1"
+itertools = "0.8"
+log = "0.4"
 reqwest = { version = "0.9", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-handlebars = "1.1"
-derive-error = "0.0"
-apiserver = { path = "../apiserver" }
-log = "0.4"
+snafu = "0.4"
 stderrlog = "0.4"
-itertools = "0.8"
 
 [build-dependencies]
 cargo-readme = "3.1"
