--- a/workspaces/api/apiclient/Cargo.toml
+++ b/workspaces/api/apiclient/Cargo.toml
@@ -2,12 +2,11 @@
 name = "apiclient"
 version = "0.1.0"
 authors = ["OpenAPI Generator team and contributors"]
+edition = "2018"
 
 [dependencies]
-serde = "^1.0"
-serde_derive = "^1.0"
-serde_json = "^1.0"
+reqwest = { version = "0.9", default-features = false, features = [] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
 url = "1.5"
-reqwest = "~0.9"
-
-[dev-dependencies]
+apiserver = { path = "../apiserver" }
