--- a/workspaces/api/Cargo.toml
+++ b/workspaces/api/Cargo.toml
@@ -3,6 +3,12 @@ members = [
     "apiserver",
     "moondog",
     "thar-be-settings",
+
+    "migration/migration-helpers",
+
+    # Migrations will be listed here.  They won't need to be listed as a
+    # workspace member when we add cross-workspace dependencies.
+    "migration/migrations/v1.1/testmigration",
 ]
 
 [profile.release]
