api: set moondog to remain after exit
Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/api/moondog.service
+++ b/packages/api/moondog.service
@@ -8,6 +8,7 @@ Requires=apiserver.service
 [Service]
 Type=oneshot
 ExecStart=/usr/bin/moondog
+RemainAfterExit=true
 
 [Install]
 WantedBy=multi-user.target
