containerd: restart service if it stops
Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/containerd/containerd.service
+++ b/packages/containerd/containerd.service
@@ -7,6 +7,9 @@ After=network.target
 ExecStart=/usr/bin/containerd
 Delegate=yes
 KillMode=process
+TimeoutSec=0
+RestartSec=2
+Restart=always
 LimitNPROC=infinity
 LimitCORE=infinity
 LimitNOFILE=infinity
