--- a/packages/api/sundog.service
+++ b/packages/api/sundog.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Updates settings dynamically based on user-specified generators
+Description=User-specified setting generators
 After=network-online.target
 After=apiserver.service
 After=moondog.service
