--- a/workspaces/api/thar-be-settings/Cargo.toml
+++ b/workspaces/api/thar-be-settings/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 
 [dependencies]
 apiserver = { path = "../apiserver" }
+base64 = "0.10"
 handlebars = "1.1"
 itertools = "0.8"
 log = "0.4"
