--- a/workspaces/updater/tough/Cargo.toml
+++ b/workspaces/updater/tough/Cargo.toml
@@ -22,7 +22,7 @@ untrusted = "0.6.2"
 hex-literal = "0.2.0"
 
 [features]
-default = ["default-tls"]
+default = ["rustls-tls"]
 default-tls = ["reqwest/default-tls"]
 default-tls-vendored = ["reqwest/default-tls-vendored"]
 rustls-tls = ["reqwest/rustls-tls"]
