tough: Implement OLPC-style canonical JSON
Signed-off-by: iliana destroyer of worlds <iweller@amazon.com>

--- a/workspaces/updater/tough/Cargo.toml
+++ b/workspaces/updater/tough/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 [dependencies]
 chrono = { version = "0.4.6", features = ["serde"] }
 hex = "0.3.2"
+olpc-cjson = { path = "../olpc-cjson" }
 pem = "0.6.0"
 reqwest = { version = "0.9.17", default-features = false }
 ring = "0.14.6"
