Initial commit of storewolf
storewolf is a small tool used to create the initial filesystem
datastore for the API. It populates any defaults given in the
defaults.toml file to that datastore.

apiserver depends on this service to start.

--- a/packages/api/apiserver.service
+++ b/packages/api/apiserver.service
@@ -1,7 +1,9 @@
 [Unit]
 Description=Thar API server
 After=network.target
+After=storewolf.service
 Requires=network.target
+Requires=storewolf.service
 
 [Service]
 Type=simple
