--- a/workspaces/api/apiserver/Cargo.toml
+++ b/workspaces/api/apiserver/Cargo.toml
@@ -7,11 +7,11 @@ publish = false
 build = "build.rs"
 
 [dependencies]
+actix-web = { version = "1.0.5", default-features = false, features = ["uds"] }
 base64 = "0.10"
 lazy_static = "1.2"
 log = "0.4"
 regex = "1.1"
-rouille = { version = "3.0", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 snafu = "0.4"
