ssm: Run in AL2 container
Run the SSM agent and tools inside a container instead of directly on
the host. For now this is built from an AL2 container with the SSM
resources added into the image. Since these files are now only used in
the container they are moved out of the normal file system hierarchy.

The API socket is mapped in and host networking enabled to give the SSM
agent access to the API server, but otherwise it has no access to the
rest of the system.

Signed-off-by: Samuel Mendoza-Jonas <samjonas@amazon.com>

--- a/packages/ssm/amazon-ssm-agent.service
+++ b/packages/ssm/amazon-ssm-agent.service
@@ -7,7 +7,8 @@ StartLimitIntervalSec=60
 [Service]
 Type=simple
 WorkingDirectory=/
-ExecStart=/usr/bin/amazon-ssm-agent
+ExecStartPre=/usr/bin/docker build -t ssm /var/lib/amazon/ssm/
+ExecStart=/usr/bin/docker run --net=host -v "/var/lib/thar/api.sock:/var/lib/thar/api.sock" ssm /usr/bin/amazon-ssm-agent
 KillMode=process
 Restart=always
 RestartSec=5
