--- a/packages/ssm/ssm-tmpfiles.conf
+++ b/packages/ssm/ssm-tmpfiles.conf
@@ -1,3 +1,8 @@
-C /etc/amazon/ssm/seelog.xml - - - -
-C /etc/amazon/ssm/amazon-ssm-agent.json - - - -
-d /var/lib/amazon/ssm - - - -
+C /var/lib/amazon/ssm/etc/amazon/ssm/seelog.xml - - - -
+C /var/lib/amazon/ssm/etc/amazon/ssm/amazon-ssm-agent.json - - - -
+C /var/lib/amazon/ssm/Dockerfile - - - -
+C /var/lib/amazon/ssm/usr/bin/amazon-ssm-agent - - - -
+C /var/lib/amazon/ssm/usr/bin/ssm-cli - - - -
+C /var/lib/amazon/ssm/usr/bin/ssm-document-worker - - - -
+C /var/lib/amazon/ssm/usr/bin/ssm-session-worker - - - -
+C /var/lib/amazon/ssm/usr/bin/ssm-session-logger - - - -
