--- a/workspaces/api/Cargo.toml
+++ b/workspaces/api/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "pluto",
     "storewolf",
     "thar-be-settings",
+    "settings-committer",
 
     "migration/migrator",
     "migration/migration-helpers",
