--- a/workspaces/api/moondog/Cargo.toml
+++ b/workspaces/api/moondog/Cargo.toml
@@ -7,13 +7,16 @@ publish = false
 build = "build.rs"
 
 [dependencies]
+apiclient = { path = "../apiclient" }
+apiserver = { path = "../apiserver" }
+http = "0.1"
+log = "0.4"
 reqwest = { version = "0.9", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 snafu = "0.4"
-toml = "0.4"
-log = "0.4"
 stderrlog = "0.4"
+toml = "0.4"
 
 [build-dependencies]
 cargo-readme = "3.1"
