--- a/workspaces/api/sundog/Cargo.toml
+++ b/workspaces/api/sundog/Cargo.toml
@@ -7,12 +7,13 @@ publish = false
 build = "build.rs"
 
 [dependencies]
+apiclient = { path = "../apiclient" }
 apiserver = { path = "../apiserver" }
-reqwest = { version = "0.9", default-features = false, features = [] }
+http = "0.1"
+log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 snafu = "0.4"
-log = "0.4"
 stderrlog = "0.4"
 
 [build-dependencies]
