--- a/workspaces/api/thar-be-settings/Cargo.toml
+++ b/workspaces/api/thar-be-settings/Cargo.toml
@@ -7,12 +7,13 @@ publish = false
 build = "build.rs"
 
 [dependencies]
+apiclient = { path = "../apiclient" }
 apiserver = { path = "../apiserver" }
 base64 = "0.10"
 handlebars = "2.0"
+http = "0.1"
 itertools = "0.8"
 log = "0.4"
-reqwest = { version = "0.9", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 snafu = "0.4"
