--- a/workspaces/api/Cargo.toml
+++ b/workspaces/api/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "apiclient",
     "data_store_version",
     "moondog",
+    "netdog",
     "sundog",
     "pluto",
     "storewolf",
