Add apiclient README

--- a/workspaces/api/apiclient/Cargo.toml
+++ b/workspaces/api/apiclient/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Tom Kirchner <tjk@amazon.com>"]
 edition = "2018"
 publish = false
+build = "build.rs"
 
 [dependencies]
 # TODO: move to futures 0.3 / stdlib futures when it's ready
@@ -13,3 +14,6 @@ hyper = "0.12"
 hyperlocal = "0.6"
 snafu = "0.4"
 tokio = "0.1"
+
+[build-dependencies]
+cargo-readme = "3.1"
