--- a/workspaces/api/storewolf/Cargo.toml
+++ b/workspaces/api/storewolf/Cargo.toml
@@ -8,7 +8,9 @@ build = "build.rs"
 
 [dependencies]
 apiserver = { path = "../apiserver" }
+data_store_version = { path = "../data_store_version" }
 log = "0.4"
+rand = { version = "0.7", default-features = false, features = ["std"] }
 snafu = "0.4"
 stderrlog = "0.4"
 toml = "0.5"
