--- a/workspaces/updater/updog/Cargo.toml
+++ b/workspaces/updater/updog/Cargo.toml
@@ -6,12 +6,17 @@ edition = "2018"
 publish = false
 
 [dependencies]
+chrono = "0.4.6"
 lz4 = "1.23.1"
-serde = { version = "1.0.91", features = ["derive"] }
+platforms = "0.2.0"
+rand = "0.7.0"
+semver = "0.9.0"
+serde = "1.0.100"
 serde_json = "1.0.40"
 serde_plain = "0.3.0"
 signpost = { path = "../signpost" }
 snafu = "0.5.0"
 stderrlog = "0.4"
+time = "0.1"
 toml = "0.5.1"
 tough = { path = "../tough" }
