--- a/workspaces/api/apiserver/Cargo.toml
+++ b/workspaces/api/apiserver/Cargo.toml
@@ -18,6 +18,7 @@ snafu = "0.5"
 stderrlog = "0.4"
 toml = "0.5"
 walkdir = "2.2"
+systemd = { version = "0.4.0", default-features = false, features = [] }
 
 [build-dependencies]
 cargo-readme = "3.1"
