--- a/packages/kernel/Cargo.toml
+++ b/packages/kernel/Cargo.toml
@@ -14,3 +14,7 @@ sha512 = "094ff275fb5e07425ed1c130f63863bef5bad0a0399ccb483d820351a0d870f22b036d
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
+sdk = { path = "../sdk", optional=true }
+
+[features]
+cascade = [ "sdk" ]
