--- a/packages/preinit/Cargo.toml
+++ b/packages/preinit/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2018"
 publish = false
 build = "build.rs"
 
+[package.metadata.build-package]
+source-groups = [ "preinit" ]
+
 [lib]
 path = "pkg.rs"
 
