--- a/packages/updater/Cargo.toml
+++ b/packages/updater/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2018"
 publish = false
 build = "build.rs"
 
+[package.metadata.build-package]
+source-groups = [ "updater" ]
+
 [lib]
 path = "pkg.rs"
 
