--- a/workspaces/tuftool/Cargo.toml
+++ b/workspaces/tuftool/Cargo.toml
@@ -25,3 +25,6 @@ structopt = "0.2.18"
 tough_schema = { path = "../updater/tough_schema" }
 olpc-cjson = { path = "../updater/olpc-cjson" }
 walkdir = "2.2.9"
+
+[dev-dependencies]
+tempfile = "3.1.0"
