Make sd_notify functionality an optional feature
The sd_notify functionality requires the systemd crate which has a
dependency on `systemd-devel` which would make builds fail outside of package
builds which is troublesome for `cargo test`

--- a/workspaces/api/apiserver/Cargo.toml
+++ b/workspaces/api/apiserver/Cargo.toml
@@ -18,7 +18,12 @@ snafu = "0.5"
 stderrlog = "0.4"
 toml = "0.5"
 walkdir = "2.2"
-systemd = { version = "0.4.0", default-features = false, features = [] }
+systemd = { version = "0.4.0", default-features = false, features = [], optional = true }
+
+[features]
+default = []
+
+sd_notify = ["systemd"]
 
 [build-dependencies]
 cargo-readme = "3.1"
