--- a/workspaces/Cargo.toml
+++ b/workspaces/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "api/netdog",
     "api/sundog",
     "api/pluto",
+    "api/servicedog",
     "api/storewolf",
     "api/thar-be-settings",
     "api/settings-committer",
