chrony: move clock state to ephemeral storage
Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/chrony/chronyd.service
+++ b/packages/chrony/chronyd.service
@@ -7,6 +7,7 @@ Requires=network-online.target configured.target
 [Service]
 Type=simple
 ExecStart=/usr/sbin/chronyd -d
+StateDirectory=chrony/state
 
 [Install]
 WantedBy=multi-user.target
