update_metadata: Split out metadata definition from Updog.
Signed-off-by: Samuel Mendoza-Jonas <samjonas@amazon.com>

--- a/workspaces/deny.toml
+++ b/workspaces/deny.toml
@@ -52,6 +52,7 @@ skip = [
     { name = "tough", licenses = [] },
     { name = "tough_schema", licenses = [] },
     { name = "tuftool", licenses = [] },
+    { name = "update_metadata", licenses = [] },
     { name = "updog", licenses = [] },
     { name = "webpki-roots", licenses = [] },
 
