--- a/workspaces/Cargo.toml
+++ b/workspaces/Cargo.toml
@@ -27,6 +27,7 @@ members = [
     "updater/signpost",
     "updater/tough",
     "updater/tough_schema",
+    "updater/update_metadata",
     "updater/updog",
 
     "tuftool",
