--- a/workspaces/updater/updog/Cargo.toml
+++ b/workspaces/updater/updog/Cargo.toml
@@ -13,7 +13,7 @@ lz4 = "1.23.1"
 rand = "0.7.0"
 regex = "1.1"
 semver = "0.9.0"
-serde = "1.0.100"
+serde = { version = "1.0.100", features = ["derive"] }
 serde_json = "1.0.40"
 serde_plain = "0.3.0"
 signpost = { path = "../signpost" }
@@ -22,3 +22,10 @@ snafu = "0.5.0"
 time = "0.1"
 toml = "0.5.1"
 tough = { path = "../tough" }
+tracing = "0.1"
+tracing-subscriber = "0.1"
+update_metadata = { path = "../update_metadata" }
+structopt = "0.3"
+
+[dev-dependencies]
+tempfile = "3.1.0"
