use conventional paths for container services
Although these services ship as part of the OS, we want to enable
customers to replace the persistent storage volume with their own
copy, for example to supply a cache of downloaded container images.

Paths such as `/var/lib/docker` make it easier for these volumes
to be created without baking in a lot of OS specific details.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/kubernetes/kubelet.service
+++ b/packages/kubernetes/kubelet.service
@@ -15,9 +15,10 @@ ExecStart=/usr/bin/kubelet \
     --allow-privileged=true \
     --container-runtime docker \
     --network-plugin cni \
-    --root-dir /var/lib/thar/kubelet \
-    --cert-dir /var/lib/thar/kubelet/pki \
-    --volume-plugin-dir /var/lib/thar/kubelet/plugins/volume/exec \
+    --root-dir /var/lib/kubelet \
+    --cert-dir /var/lib/kubelet/pki \
+    --volume-plugin-dir /var/lib/kubelet/plugins/volume/exec \
+    --experimental-dockershim-root-directory /var/lib/kubelet/dockershim \
     --node-ip ${NODE_IP} \
     --pod-infra-container-image ${POD_INFRA_CONTAINER_IMAGE}
 
