Conditionalize including a shell
This change adds the ability to skip building the bash package, and
instead replace /bin/login with a small binary that prints a message to
the console that console logins are not supported.

Signed-off-by: Jamie Anderson <jamieand@amazon.com>

--- a/packages/login/Cargo.toml
+++ b/packages/login/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "release"
-version = "0.1.2"
+name = "login"
+version = "0.0.1"
 edition = "2018"
 publish = false
 build = "build.rs"
@@ -10,3 +10,9 @@ path = "pkg.rs"
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
+glibc = { path = "../glibc", optional=true }
+
+[features]
+cascade = [
+    "glibc",
+]
