bork: Random seed generator
Add bork, a settings generator that creates the random seed required by
Updog.

Signed-off-by: Samuel Mendoza-Jonas <samjonas@amazon.com>

--- a/workspaces/Cargo.toml
+++ b/workspaces/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "api/apiserver",
     "api/apiclient",
+    "api/bork",
     "api/data_store_version",
     "api/moondog",
     "api/netdog",
