--- a/packages/Cargo.toml
+++ b/packages/Cargo.toml
@@ -40,6 +40,7 @@ members = [
     "libnfnetlink",
     "libnftnl",
     "libnl",
+    "libpcap",
     "libseccomp",
     "libxcrypt",
     "ncurses",
