--- a/packages/kernel/Cargo.toml
+++ b/packages/kernel/Cargo.toml
@@ -9,8 +9,9 @@ build = "build.rs"
 path = "pkg.rs"
 
 [[package.metadata.build-package.external-files]]
-url = "https://cdn.amazonlinux.com/blobstore/d88833a42027a5779606b1da7579281dd2fde351262da02c3f6daf4ef8983b46/kernel-4.19.66-22.57.amzn2.src.rpm"
-sha512 = "094ff275fb5e07425ed1c130f63863bef5bad0a0399ccb483d820351a0d870f22b036d5e995d3f593d31a0c9bcb9b9f94dcf1856974a29d5fc5f6fb78e83bcee"
+# Use latest-srpm-url.sh to get this.
+url = "https://cdn.amazonlinux.com/blobstore/376c4a8ffedb59b2a17019fd74811a1f804ca1edcdfb71cab6f64222052631b0/kernel-4.19.72-25.58.amzn2.src.rpm"
+sha512 = "ff1722d9b21a2c6f9f10600268a68929e1a600254aa25e7621df1006ea62750d892c2503fdc929a355f0a9d70c019202af744803892fade7e6bd8b2977fb3539"
 
 [build-dependencies]
 buildsys = { path = "../../tools/buildsys" }
