Write webpki-roots shim for rustls consumers
Signed-off-by: iliana destroyer of worlds <iweller@amazon.com>

--- a/packages/updater/Cargo.toml
+++ b/packages/updater/Cargo.toml
@@ -6,7 +6,7 @@ publish = false
 build = "build.rs"
 
 [package.metadata.build-package]
-source-groups = [ "updater" ]
+source-groups = [ "updater", "webpki-roots-shim" ]
 
 [lib]
 path = "pkg.rs"
