signpost: Split block module into new crate
This introduces block-party so that we can use the same functions in an
upcoming program to grow disk partitions.

Signed-off-by: iliana destroyer of worlds <iweller@amazon.com>

--- a/workspaces/Cargo.toml
+++ b/workspaces/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "preinit/laika",
 
     "updater/olpc-cjson",
+    "updater/block-party",
     "updater/signpost",
     "updater/tough",
     "updater/tough_schema",
