kubernetes: build kubelet as standalone binary
Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/images/aws-k8s/Cargo.toml
+++ b/images/aws-k8s/Cargo.toml
@@ -10,7 +10,7 @@ included-packages = [
     "aws-iam-authenticator",
     "cni",
     "cni-plugins",
-    "kubernetes",
+    "kubelet",
     "release",
 ]
 
