Move admin container definition to extras
Signed-off-by: iliana destroyer of worlds <iweller@amazon.com>

--- a/extras/admin-container/Dockerfile
+++ b/extras/admin-container/Dockerfile
@@ -26,15 +26,15 @@ RUN rm -f /etc/motd /etc/issue
 
 COPY --from=builder /opt/bash /opt/bin/
 
-ADD --chown=root:root ec2-user /etc/sudoers.d/
+ADD --chown=root:root ec2-user.sudoers /etc/sudoers.d/ec2-user
 ADD --chown=root:root motd /etc/
 ADD start_admin_sshd.sh /usr/sbin/
 ADD ./sshd_config /etc/ssh/
-ADD ./sheltie /usr/local/bin/
+ADD ./sheltie /usr/bin/
 
 RUN chmod 440 /etc/sudoers.d/ec2-user
 RUN chmod +x /usr/sbin/start_admin_sshd.sh
-RUN chmod +x /usr/local/bin/sheltie
+RUN chmod +x /usr/bin/sheltie
 RUN useradd -m -G users ec2-user
 
 CMD ["/usr/sbin/start_admin_sshd.sh"]
