tuftool: Download targets from existing repo
Add the `download` command which retrieves all targets of an existing
TUF repository, and optionally its root.json. This is intended to
recreate the initial input directory used by `tuftool create` when
iterating on an existing TUF repository.

Signed-off-by: Samuel Mendoza-Jonas <samjonas@amazon.com>

--- a/workspaces/tuftool/Cargo.toml
+++ b/workspaces/tuftool/Cargo.toml
@@ -19,6 +19,7 @@ maplit = "1.0.1"
 olpc-cjson = { path = "../updater/olpc-cjson" }
 pem = "0.6.0"
 rayon = "1.2"
+reqwest = "0.9.20"
 ring = { version = "0.16.7", features = ["std"] }
 rusoto_core = { version = "0.40", optional = true, default-features = false }
 rusoto_credential = { version = "0.40", optional = true }
@@ -32,3 +33,5 @@ tempfile = "3.1.0"
 tough_schema = { path = "../updater/tough_schema" }
 url = "2.1.0"
 walkdir = "2.2.9"
+tempdir = "0.3.7"
+tough = { path = "../updater/tough" }
