host-containers:Specify KillMode for admin,control
Specifies the KillMode to `mixed` for the admin and control systemd
unit templates.

--- a/packages/release/host-containers-systemd-unit-admin.template
+++ b/packages/release/host-containers-systemd-unit-admin.template
@@ -9,6 +9,7 @@ ExecStart=/usr/bin/host-ctr -ctr-id admin -source {{ settings.host-containers.ad
 Restart=always
 RestartSec=10
 TimeoutStopSec=60
+KillMode=mixed
 
 [Install]
 WantedBy=multi-user.target
