--- a/packages/release/host-containers-systemd-unit-control.template
+++ b/packages/release/host-containers-systemd-unit-control.template
@@ -9,6 +9,7 @@ ExecStart=/usr/bin/host-ctr -ctr-id control -source {{ settings.host-containers.
 Restart=always
 RestartSec=10
 TimeoutStopSec=60
+KillMode=mixed
 
 [Install]
 WantedBy=multi-user.target
