--- a/workspaces/updater/updog/Cargo.toml
+++ b/workspaces/updater/updog/Cargo.toml
@@ -18,7 +18,8 @@ serde_json = "1.0.40"
 serde_plain = "0.3.0"
 signpost = { path = "../signpost" }
 snafu = "0.5.0"
-stderrlog = "0.4"
+tracing = "0.1"
+tracing-subscriber = "0.1"
 sys-mount = "1.2.1"
 tempfile = "3.1.0"
 time = "0.1"
