--- a/workspaces/api/pluto/Cargo.toml
+++ b/workspaces/api/pluto/Cargo.toml
@@ -10,8 +10,8 @@ build = "build.rs"
 reqwest = { version = "0.9", default-features = false, features = []}
 serde_json = "1"
 snafu = "0.5"
-log = "0.4"
-stderrlog = "0.4"
+tracing = "0.1"
+tracing-subscriber = "0.1"
 
 [build-dependencies]
 cargo-readme = "3.1"
