--- a/workspaces/api/settings-committer/Cargo.toml
+++ b/workspaces/api/settings-committer/Cargo.toml
@@ -12,8 +12,8 @@ snafu = "0.5"
 http = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-log = "0.4"
-stderrlog = "0.4"
+tracing = "0.1"
+tracing-subscriber = "0.1"
 
 [build-dependencies]
 cargo-readme = "3.1"
