--- a/workspaces/api/storewolf/Cargo.toml
+++ b/workspaces/api/storewolf/Cargo.toml
@@ -9,10 +9,10 @@ build = "build.rs"
 [dependencies]
 apiserver = { path = "../apiserver" }
 data_store_version = { path = "../data_store_version" }
-log = "0.4"
+tracing = "0.1"
 rand = { version = "0.7", default-features = false, features = ["std"] }
 snafu = "0.5"
-stderrlog = "0.4"
+tracing-subscriber = "0.1"
 toml = "0.5"
 
 [build-dependencies]
