--- a/workspaces/api/thar-be-settings/Cargo.toml
+++ b/workspaces/api/thar-be-settings/Cargo.toml
@@ -13,11 +13,11 @@ base64 = "0.10"
 handlebars = "2.0"
 http = "0.1"
 itertools = "0.8"
-log = "0.4"
+tracing = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 snafu = "0.5"
-stderrlog = "0.4"
+tracing-subscriber = "0.1"
 
 [build-dependencies]
 cargo-readme = "3.1"
