containerd: disable unused storage plugins
This avoids spurious errors in the log when the service starts.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/release/host-containerd-config.toml
+++ b/packages/release/host-containerd-config.toml
@@ -1,6 +1,6 @@
 root = "/var/lib/host-containerd"
 state = "/run/host-containerd"
-disabled_plugins = ["cri"]
+disabled_plugins = ["aufs", "zfs", "cri"]
 
 [grpc]
 address = "/run/host-containerd/containerd.sock"
