--- a/packages/containerd/containerd-config.toml
+++ b/packages/containerd/containerd-config.toml
@@ -1,5 +1,6 @@
 root = "/var/lib/containerd"
 state = "/run/containerd"
+disabled_plugins = ["aufs", "zfs"]
 
 [grpc]
 address = "/run/containerd/containerd.sock"
