--- a/packages/api/apiserver.service
+++ b/packages/api/apiserver.service
@@ -5,7 +5,7 @@ Requires=network.target storewolf.service migrator.service
 
 [Service]
 Type=notify
-ExecStart=/usr/bin/apiserver --datastore-path /var/lib/thar/datastore/current -v -v -v
+ExecStart=/usr/bin/apiserver --datastore-path /var/lib/thar/datastore/current --socket-gid 274 -v -v -v
 
 [Install]
 WantedBy=multi-user.target
