--- a/workspaces/api/apiserver/Cargo.toml
+++ b/workspaces/api/apiserver/Cargo.toml
@@ -20,6 +20,7 @@ toml = "0.5"
 walkdir = "2.2"
 systemd = { version = "0.4.0", default-features = false, features = [], optional = true }
 nix = "0.15.0"
+libc = "0.2"
 
 [features]
 default = []
