--- a/packages/api/migrator.service
+++ b/packages/api/migrator.service
@@ -3,7 +3,7 @@ Description=Thar data store migrator
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/migrator --datastore-path /var/lib/thar/datastore/current --migration-directories /var/lib/thar/datastore/migrations --migrate-to-version-from-file /usr/share/thar/data-store-version -v -v -v
+ExecStart=/usr/bin/migrator --datastore-path /var/lib/thar/datastore/current --migration-directories /var/lib/thar/datastore/migrations --migrate-to-version-from-file /usr/share/thar/data-store-version -v -v
 RemainAfterExit=true
 
 [Install]
