chrony: enable daemon system call filter and switch to non-root user
Create system user `chrony` to run chrony service under
Specify the seccomp filter to '-1' so SIGSYS is thrown when a forbidden
system call is made. Specify chronyd to switch into user `chrony` after
startup.

--- a/packages/chrony/chronyd.service
+++ b/packages/chrony/chronyd.service
@@ -6,7 +6,7 @@ Requires=network-online.target configured.target
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/chronyd -d
+ExecStart=/usr/sbin/chronyd -d -F -1
 StateDirectory=chrony/state
 
 [Install]
