--- a/workspaces/deny.toml
+++ b/workspaces/deny.toml
@@ -33,6 +33,7 @@ skip = [
     { name = "bork", licenses = [] },
     { name = "data_store_version", licenses = [] },
     { name = "growpart", licenses = [] },
+    { name = "host-containers", licenses = [] },
     { name = "laika", licenses = [] },
     { name = "migration-helpers", licenses = [] },
     { name = "migrator", licenses = [] },
