--- a/packages/release/release-sysctl.conf
+++ b/packages/release/release-sysctl.conf
@@ -1,2 +1,27 @@
+## AL2 defaults ##
+# Maximize console logging level for kernel printk messages
+kernel.printk = 8 4 1 7
+
+# Wait 30 seconds and then reboot
+kernel.panic = 30
+
+# Allow neighbor cache entries to expire even when the cache is not full
+net.ipv4.neigh.default.gc_thresh1 = 0
+net.ipv6.neigh.default.gc_thresh1 = 0
+
+# Avoid neighbor table contention in large subnets
+net.ipv4.neigh.default.gc_thresh2 = 15360
+net.ipv6.neigh.default.gc_thresh2 = 15360
+net.ipv4.neigh.default.gc_thresh3 = 16384
+net.ipv6.neigh.default.gc_thresh3 = 16384
+
+## Thar settings ##
 # Enable IPv4 forwarding for container networking.
-net.ipv4.conf.all.forwarding=1
+net.ipv4.conf.all.forwarding = 1
+
+# Have a larger connection range available
+net.ipv4.ip_local_port_range = 1025 65000
+
+# Connection tracking to prevent dropped connections
+net.netfilter.nf_conntrack_max = 1048576
+net.netfilter.nf_conntrack_generic_timeout = 120
