settings: add new `max-pods` option for kubelet config
Adds new `max-pods` options to specify the maximum number of pods.
Places an upper bound on pods that can be scheduled depending on the
instance type the thar node is launched as.

Updates README with new dynamic setting `max-pods`

--- a/workspaces/api/storewolf/defaults.toml
+++ b/workspaces/api/storewolf/defaults.toml
@@ -45,6 +45,11 @@ path = "/etc/kubernetes/pki/ca.crt"
 template-path = "/usr/share/templates/kubernetes-ca-crt"
 
 [[metadata]]
+key = "settings.kubernetes.max-pods"
+md = "setting-generator"
+val = "pluto max-pods"
+
+[[metadata]]
 key = "settings.kubernetes.cluster-dns-ip"
 md = "setting-generator"
 val = "pluto cluster-dns-ip"
