--- a/packages/kubernetes/kubelet.service
+++ b/packages/kubernetes/kubelet.service
@@ -8,6 +8,11 @@ Requires=containerd.service
 [Service]
 EnvironmentFile=/etc/kubernetes/kubelet/env
 ExecStartPre=/sbin/iptables -P FORWARD ACCEPT
+# Pull the pause container image before starting `kubelet` so `containerd/cri` wouldn't have to
+ExecStartPre=/usr/bin/host-ctr -source ${POD_INFRA_CONTAINER_IMAGE} \
+    -pull-image-only \
+    -containerd-socket /run/containerd/containerd.sock \
+    -namespace k8s.io
 ExecStart=/usr/bin/kubelet \
     --cloud-provider aws \
     --config /etc/kubernetes/kubelet/config \
