--- a/workspaces/tuftool/Cargo.toml
+++ b/workspaces/tuftool/Cargo.toml
@@ -19,7 +19,7 @@ maplit = "1.0.1"
 olpc-cjson = { path = "../updater/olpc-cjson" }
 pem = "0.6.0"
 rayon = "1.2"
-reqwest = "0.9.20"
+reqwest = { version = "0.9.20", features = ["rustls-tls"], default-features = false }
 ring = { version = "0.16.7", features = ["std"] }
 rusoto_core = { version = "0.41", optional = true, default-features = false }
 rusoto_credential = { version = "0.41", optional = true }
