--- a/workspaces/deny.toml
+++ b/workspaces/deny.toml
@@ -31,6 +31,7 @@ skip = [
     { name = "apiserver", licenses = [] },
     { name = "block-party", licenses = [] },
     { name = "bork", licenses = [] },
+    { name = "borkseed-migration", licenses = [] },
     { name = "data_store_version", licenses = [] },
     { name = "growpart", licenses = [] },
     { name = "host-containers", licenses = [] },
