Remove network.target from apiserver.service dependencies
Since we're now binding to a Unix-domain socket, we no longer need any network
interfaces up to bind to them.

--- a/packages/workspaces/apiserver.service
+++ b/packages/workspaces/apiserver.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Thar API server
-After=network.target storewolf.service migrator.service
-Requires=network.target storewolf.service migrator.service
+After=storewolf.service migrator.service
+Requires=storewolf.service migrator.service
 
 [Service]
 Type=notify
