Join systemd dependency lines
This is consistent with other units, and arguably easier to find/read the
dependency list if it's on a single line.

Also add comments to clarify one of the dependencies.

--- a/packages/workspaces/sundog.service
+++ b/packages/workspaces/sundog.service
@@ -1,10 +1,8 @@
 [Unit]
 Description=User-specified setting generators
-After=network-online.target
-After=apiserver.service
-After=moondog.service
-Requires=network-online.target
-Requires=apiserver.service
+# Need network access to support commands talking to IMDS.
+After=network-online.target apiserver.service moondog.service
+Requires=network-online.target apiserver.service
 
 [Service]
 Type=oneshot
