--- a/packages/workspaces/moondog.service
+++ b/packages/workspaces/moondog.service
@@ -1,9 +1,8 @@
 [Unit]
 Description=Thar userdata configuration system
-After=network-online.target
-After=apiserver.service
-Requires=network-online.target
-Requires=apiserver.service
+# Need network online to talk to IMDS.
+After=network-online.target apiserver.service
+Requires=network-online.target apiserver.service
 # We only want to run once, at first boot.  This file is created by moondog
 # after a successful run.
 ConditionPathExists=!/var/lib/thar/moondog.ran
