Implement (de)serialization for data_store_version
Add the appropriate impls for data_store_version, removing the need for
doing it "manually" in update_metadata.

Signed-off-by: Samuel Mendoza-Jonas <samjonas@amazon.com>

--- a/workspaces/api/data_store_version/Cargo.toml
+++ b/workspaces/api/data_store_version/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 lazy_static = "1.2"
 log = "0.4"
 regex = "1.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_plain = "0.3.0"
+
 snafu = "0.5"
 
 [build-dependencies]
