--- a/workspaces/api/migration/migrator/Cargo.toml
+++ b/workspaces/api/migration/migrator/Cargo.toml
@@ -10,12 +10,12 @@ build = "build.rs"
 data_store_version = { path = "../../data_store_version" }
 fs_extra = "1.1"
 lazy_static = "1.2"
-tracing = "0.1"
+log = "0.4"
 nix = "0.15"
 rand = { version = "0.7", default-features = false, features = ["std"] }
 regex = "1.1"
+simplelog = "0.7"
 snafu = "0.5"
-tracing-subscriber = "0.1"
 
 [build-dependencies]
 cargo-readme = "3.1"
