--- a/workspaces/api/servicedog/Cargo.toml
+++ b/workspaces/api/servicedog/Cargo.toml
@@ -10,11 +10,11 @@ build = "build.rs"
 apiclient = { path = "../apiclient" }
 apiserver = { path = "../apiserver" }
 http = "0.1"
-tracing = "0.1"
+log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
+simplelog = "0.7"
 snafu = "0.5"
-tracing-subscriber = "0.1"
 
 [build-dependencies]
 cargo-readme = "3.1"
