--- a/workspaces/api/settings-committer/Cargo.toml
+++ b/workspaces/api/settings-committer/Cargo.toml
@@ -10,10 +10,10 @@ build = "build.rs"
 apiclient = { path = "../apiclient" }
 snafu = "0.5"
 http = "0.1"
+log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-tracing = "0.1"
-tracing-subscriber = "0.1"
+simplelog = "0.7"
 
 [build-dependencies]
 cargo-readme = "3.1"
