--- a/workspaces/updater/updog/Cargo.toml
+++ b/workspaces/updater/updog/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 [dependencies]
 chrono = "0.4.9"
 data_store_version = { path = "../../api/data_store_version" }
+log = "0.4"
 lz4 = "1.23.1"
 rand = "0.7.0"
 regex = "1.1"
@@ -16,9 +17,8 @@ serde = "1.0.100"
 serde_json = "1.0.40"
 serde_plain = "0.3.0"
 signpost = { path = "../signpost" }
+simplelog = "0.7"
 snafu = "0.5.0"
-tracing = "0.1"
-tracing-subscriber = "0.1"
 time = "0.1"
 toml = "0.5.1"
 tough = { path = "../tough" }
